hide scrollbars in bootstrap dropdown menus when not needed https://github.com/Strategy11/formidable/issues/1722

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -764,7 +764,7 @@ div.updated.frm_updated_message,
 .dropdown-toggle:focus{outline:0;}
 .frm-dropdown-menu{
 	max-height:200px;
-	overflow:scroll;
+	overflow:auto;
 	overflow-x: hidden;
 	position:absolute;
 	top:100%;
